syntax = "proto3";

package v1;

option go_package = "./";

enum ServerStatus {
  SERVER_UNKNOWN = 0;
  SERVER_FREE = 1;
  SERVER_WORKING = 2;
  SERVER_LOCKED = 3;
}