syntax = "proto3";

package api.v1;
import "errors/errors.proto";

option go_package = "micro-snark-server/api/v1;v1";

enum ErrorReason {
  option (errors.default_code) = 500;

  USER_NOT_FOUND = 0 [(errors.code) = 404];
  CONTENT_MISSING = 1 [(errors.code) = 400];
  SRV_CAN_NOT_USED_NOW = 2;
}